--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Blog posts</h1>
     {% block content %}
 
     {% endblock %}
