--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Index Template</h2>
-<div class="alert alert-success" role="alert">
-    A simple success alert—check it out!
-</div>
-<div class="alert alert-danger" role="alert">
-    A simple danger alert—check it out!
-</div>
-<div class="alert alert-warning" role="alert">
-    A simple warning alert—check it out!
-</div>
+    <h2>Blog Posts</h2>
+    {% for post in posts %}
+    <div class="row">
+        <div class="col">
+            <h3>{{ post.title }}</h3>
+            {% include "blog/post-byline.html" %}
+            <p>{{ post.summary }}</p>
+            <p>
+                ({{ post.content|wordcount }} words)
+                <a href="{% url "blog-post-detail" post.slug %}">Read More</a
+            </p>
+        </div>
+    </div>
+    {% endfor %}
 {% endblock %}
